--- a/assets/fresh/partials/_colors.scss
+++ b/assets/fresh/partials/_colors.scss
@@ -6,9 +6,9 @@ $white: #fff;
 $smoke-white: #fcfcfc;
 $grey-white: #f2f2f2;
 
-$primary: #4FC1EA;
-$secondary: #F39200;
-$accent: #00efb7;
+$primary: #3977f2;
+$secondary: #e2635d;
+$accent: #358c84;
 
 $fade-grey: #ededed;
 $light-grey: #EFF4F7;
@@ -28,3 +28,5 @@ $dark-grey: #344258;
 $border-grey: #ccc;
 $muted-grey: #999;
 $section-grey: #fbfbfb;
+$sand: #f8ebe5;
+$dark-sand: #c4bab5;
