--- a/assets/fresh/partials/_footer.scss
+++ b/assets/fresh/partials/_footer.scss
@@ -41,4 +41,37 @@ footer.footer-dark {
             }
         }
     }
+    .footer-copyright h3 {
+        font-weight:500;
+        font-size: 1.2rem;
+        text-transform: capitalize;
+        letter-spacing: 1px;
+        margin-top: 35px;
+        margin-bottom: -10px;
+        text-align: center;
+        a {
+            color: $secondary;
+        }
+        :hover {
+            transition: all 0.5s;
+            color: $white;
+        }
+    }
+    .footer-attributes {
+        margin-top: 15px;
+        margin-left: 10px;
+        font-size: x-small;
+        font-weight: 600;
+        a {
+            color: $white;
+        }
+        :hover {
+            transition: all 0.5s;
+            color: $secondary;
+        }
+        display: none;
+        &.is-active {
+            display: block;
+        }
+    }
 }
