--- a/assets/fresh/partials/_hero.scss
+++ b/assets/fresh/partials/_hero.scss
@@ -11,6 +11,7 @@ Hero styles
     .title {
         &.is-bold {
             font-weight: 700;
+            word-spacing: -0.7rem;
         }
     }
     .subtitle {
