--- a/assets/fresh/partials/_navbar.scss
+++ b/assets/fresh/partials/_navbar.scss
@@ -23,8 +23,9 @@ Navbar
     .navbar-brand {
         min-height: 4rem;
         img {
-            max-height: 36px !important;
-            height: 36px;
+            max-height: 50px !important;
+            height: 50px;
+            width: 180px;
         }
         //Removing navbar item default hover behaviour
         &:hover {
